# boss_mcp

./: .gitignore  1.json  CLAUDE.md  Cargo.toml  README.md  city.json  config.example.yaml  config.yaml  site.json
.claude/skills/rig/: SKILL.md
.claude/skills/rig/reference/: agents-completion-streaming.md  architecture.md  code-examples.md  dependencies-and-features.md  engineering-constraints.md  (+4 more)
.claude/skills/rust_drission/: SKILL.md
.github/workflows/: release.yml
.omc/state/: hud-stdin-cache.json
docker/: Dockerfile  config.yaml  docker-compose.yml
skills/boss_mcp/: SKILL.md
src/: browser.rs  config.rs  lib.rs  main.rs  mcp_server.rs
src/agent/: error.rs  mod.rs  service.rs  types.rs
src/agent/llm/: config.rs  extractor.rs  factory.rs  mod.rs  prompt.rs  responder.rs
src/agent/ports/: company.rs  messaging.rs  mod.rs  position.rs
src/agent/profile/: merge.rs  mod.rs  model.rs  repository.rs
src/agent/session/: mod.rs  model.rs  repository.rs
src/boss/: mod.rs  model.rs
src/boss/handler/: login.rs  login_check.rs  mod.rs  notification.rs  position_chat.rs  position_detail.rs  position_detail_dom.html  search_position.rs  search_position_dom.html  send_message.rs  send_resume.rs  unread_chat.rs  unread_chat_dom.html
src/qcc/: README.md  mod.rs  model.rs
src/qcc/handler/: company_detail.rs  company_detail_dom.html  login.rs  login_check.rs  mod.rs  search_company.rs  search_company_dom.html
src/utils/: common.rs  conditions.rs  industry.rs  job_query.rs  mod.rs  position.rs  site.rs
tests/: agent_persistence.rs  agent_service_flow.rs
(+2 files in other folders)
