[package]
name = "boss_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
rust_drission = "0.2.5"
anyhow = "1.0.102"
base64 = "0.22.1"
serde_json = "1"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
rmcp = { version = "1.6.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util"] }
thiserror = "2"
schemars = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
